# advent-of-code-2023

./: .gitignore  README.md  day4.py  day5.py  day6.py  day_template.py  move.py  pyproject.toml
aoc/day02/: challenge.py
aoc/day03/: challenge.py  test_challenge.py
aoc/day05/: challenge.py  test_challenge.py
aoc/day06/: challenge.py  test_challenge.py
aoc/day07/: challenge.py
aoc/day08/: challenge.py  test_challenge.py
aoc/day09/: challenge.py
aoc/day1/: challenge.py
aoc/day10/: challenge.py  test_challenge.py
aoc/day11/: challenge.py  test_challenge.py
aoc/day13/: challenge.py  test_challenge.py
aoc/day14/: challenge.py  test_challenge.py
aoc/day15/: __main__.py  challenge.py  test_challenge.py
aoc/day16/: __main__.py  challenge.py  test_challenge.py
aoc/day18/: challenge.py  test_challenge.py
aoc/day19/: challenge.py  test_challenge.py
aoc/day20/: challenge.py  test_challenge.py
aoc/day21/: __main__.py  challenge.py  test_challenge.py
aoc/day23/: challenge.py  test_challenge.py
aoc/day24/: __main__.py  challenge.py  test_challenge.py
aoc/day3/: challenge.py  test_challenge.py
aoc/day4/: challenge.py
aoc/day5/: challenge.py  test_challenge.py
aoc/day6/: challenge.py
aoc/day7/: challenge.py  test_challenge.py
aoc/day9/: __main__.py  challenge.py  test_challenge.py
aoc/tools/: __init__.py  _utils.py  genday.py  leftpad.py  utils.py
aoc/tools/_day_template/: challenge.py  test_challenge.py
utils/: __init__.py  core.py  extra_math.py  iterutils.py  matrix.py  test_utils.py
