[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Solved challenges from AoC 2023"
authors = ["Omar Valdez <80359343+ValdezFOmar@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ValdezFOmar/advent-of-code-2023"

[tool.poetry.scripts]
genday = "aoc.tools.genday:main"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.10.3"
pylint = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportConstantRedefinition = true
# reportPrivateUsage = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "redefined-builtin"
]
good-names = ["TEST_OUTPUT"]
ignore-paths = [
    "aoc/tools/_day_template/*"
]

[tool.pylint.design]
max-returns = 8
